@@ -14,6 +14,7 @@ Plan
 * Remove extraneous spaces between operators, parens, etc.
 * Add new lines where they should be (no run-ons after colons).
 * Standardize indents to be 4 spaces.
+* Remove deepcopy wherever possible.
 * Increment to version 0.9.2
 
 
